--- a/rene_nunes/20240806_admin-template/assets/css/style.css
+++ b/rene_nunes/20240806_admin-template/assets/css/style.css
@@ -1,1 +1,249 @@
-*{margin:0;padding:0;box-sizing:border-box}html,body{height:100%;font-family:"Roboto", sans-serif}body{color:#b4bed2}.flex-1{flex:1}.align-center{margin-left:auto;margin-right:auto}.main-container{height:100%;display:flex;flex-direction:column}.main-container header{padding-left:16px;padding-right:16px}.main-container header.mc-top{display:flex;align-items:center;background-color:#283142;z-index:1;box-shadow:rgba(0,0,0,0.75) 0px 1px 8px -1px}.main-container header.mc-top .header-logo{width:250px;padding-right:16px}.main-container header.mc-top .header-content{flex:1;display:flex;justify-content:space-between;align-items:center;color:#FFF}.main-container header.mc-top .header-content .hc-search{color:#72849a}.main-container header.mc-top .header-content .hc-search .search-container{display:flex;align-items:center;column-gap:10px;width:300px;height:40px;padding-left:10px;padding-right:10px;border:1px solid #4d5b75;background-color:#1b2531;border-radius:10px}.main-container header.mc-top .header-content .hc-search .search-container input{color:inherit;height:100%;flex:1;background-color:transparent;border:0;outline:0}.main-container header.mc-top .header-content .hc-options{display:flex;align-items:center;justify-content:space-between}.main-container header.mc-top .header-content .hc-options .option-item{padding-left:16px;padding-right:16px}.main-container header.mc-top .header-content .hc-options .option-item i{font-size:20px}.main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container{display:flex;align-items:center;column-gap:8px}.main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container .image{width:40px;height:40px;background-size:cover;border-radius:40px}.main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container .infos-ct .name,.main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container .infos-ct .info{font-size:14px}.main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container .infos-ct .name{font-weight:500}.main-container .mc-bottom{flex:1;display:flex;position:relative}.main-container .mc-bottom .main-menu{height:100%;width:250px;position:relative;color:#FFF;background-color:#283142}.main-container .mc-bottom .main-menu .main-menu-inside{position:absolute;width:100%;height:100%;padding-top:15px;padding-bottom:15px;overflow:auto}.main-container .mc-bottom .main-menu .main-menu-inside .title{display:block;padding:12px 24px;font-size:12px;text-transform:uppercase}.main-container .mc-bottom .main-menu .main-menu-inside ul li a{display:block;padding:12px 24px;font-size:14px;color:inherit}.main-container .mc-bottom .main-content{flex:1;background-color:#1b2531;position:relative}.main-container .mc-bottom .main-content .main-content-inside{position:absolute;padding:25px;width:100%;height:100%;overflow:auto}.main-container .mc-bottom .main-content .ict-line-container{display:flex;column-gap:20px}.main-container .mc-bottom .main-content .initial-container-top{display:flex}.main-container .mc-bottom .main-content .initial-container-top .ict-left{flex:1}.main-container .mc-bottom .main-content .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos{display:flex;align-items:center;column-gap:16px}.main-container .mc-bottom .main-content .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos .value-big{font-size:30px;font-weight:700;color:#d6d7dc}.main-container .mc-bottom .main-content .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos .value-small{font-size:17px;font-weight:700}.main-container .mc-bottom .main-content .initial-container-top .ict-right{width:250px;background-color:greenyellow}.main-container .mc-bottom .main-content .initial-container-bottom{margin-top:20px}.container-box{display:flex;flex-direction:column;padding:20px;border-radius:12px;background-color:#283142}.container-box .cb-header+.cb-body{margin-top:20px}.container-box .cb-title{font-size:17px;color:#d6d7dc;font-weight:500}.container-box .cb-text{font-size:14px;color:#72849a}.container-box.cb-form-max-width{max-width:600px}.container-box .table-container{font-size:14px;overflow:auto;border-radius:10px}.container-box .table-container .tbl-info-circle-ct{display:flex;align-items:center;column-gap:10px}.container-box .table-container .tbl-info-circle-ct .circle{display:flex;align-items:center;justify-content:center;width:30px;height:30px;font-size:12px;border-radius:30px;color:#FFF;font-weight:500}.container-box .table-container .tbl-status{display:inline-flex;border:1px solid #CCC;padding:8px 12px;border-radius:8px;font-size:12px;font-weight:500;background-color:#2c94cd;border-color:#1c4961;color:rgba(0,0,0,0.6)}.container-box .table-container .tbl-status.color-blue{background-color:#2c94cd;border-color:#1c4961}.container-box .table-container .tbl-status.color-green{background-color:#9bfbae;border-color:#248737}.container-box .table-container .tbl-status.color-yellow{background-color:#f2fb9b;border-color:#7b8147}.container-box .table-container .tbl-status.color-red{background-color:#df7272;border-color:#873a3a}.container-box .table-container table{width:100%;border-spacing:0;border-collapse:separate}.container-box .table-container table thead tr th{position:relative;padding:16px 16px;overflow-wrap:break-word;color:#d6d7dc;font-weight:600;text-align:start;background:#2b3445;border-bottom:1px solid #1c232f;transition:background 0.2s ease}.container-box .table-container table tbody tr td{position:relative;padding:16px 16px;overflow-wrap:break-word;transition:background 0.2s, border-color 0.2s;border-bottom:1px solid #1c232f}.container-box .table-container table tbody tr:hover td{background:#2b3445}.container-box form label{display:flex;flex-direction:column}.container-box form label+label{margin-top:15px}.container-box form label .lbl{font-size:14px;text-transform:uppercase;font-weight:500;margin-bottom:6px}.container-box form label input,.container-box form label select,.container-box form label textarea{color:#b4bed2;font-size:16px;width:100%;padding:10px 15px;background-color:#283142;background-image:none;border:1px solid #4d5b75;border-radius:6px;outline:0;color-scheme:dark}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+html,
+body {
+  height: 100%;
+  font-family: "Roboto", sans-serif; }
+
+body {
+  color: #b4bed2; }
+
+.flex-1 {
+  flex: 1; }
+
+.align-center {
+  margin-left: auto;
+  margin-right: auto; }
+
+.main-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column; }
+  .main-container header {
+    padding-left: 16px;
+    padding-right: 16px; }
+    .main-container header.mc-top {
+      display: flex;
+      align-items: center;
+      background-color: #283142;
+      z-index: 1;
+      box-shadow: rgba(0, 0, 0, 0.75) 0px 1px 8px -1px; }
+      .main-container header.mc-top .header-logo {
+        width: 250px;
+        padding-right: 16px; }
+      .main-container header.mc-top .header-content {
+        flex: 1;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: #FFF; }
+        .main-container header.mc-top .header-content .hc-search {
+          color: #72849a; }
+          .main-container header.mc-top .header-content .hc-search .search-container {
+            display: flex;
+            align-items: center;
+            column-gap: 10px;
+            width: 300px;
+            height: 40px;
+            padding-left: 10px;
+            padding-right: 10px;
+            border: 1px solid #4d5b75;
+            background-color: #1b2531;
+            border-radius: 10px; }
+            .main-container header.mc-top .header-content .hc-search .search-container input {
+              color: inherit;
+              height: 100%;
+              flex: 1;
+              background-color: transparent;
+              border: 0;
+              outline: 0; }
+        .main-container header.mc-top .header-content .hc-options {
+          display: flex;
+          align-items: center;
+          justify-content: space-between; }
+          .main-container header.mc-top .header-content .hc-options .option-item {
+            padding-left: 16px;
+            padding-right: 16px; }
+            .main-container header.mc-top .header-content .hc-options .option-item i {
+              font-size: 20px; }
+            .main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container {
+              display: flex;
+              align-items: center;
+              column-gap: 8px; }
+              .main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container .image {
+                width: 40px;
+                height: 40px;
+                background-size: cover;
+                border-radius: 40px; }
+              .main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container .infos-ct .name,
+              .main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container .infos-ct .info {
+                font-size: 14px; }
+              .main-container header.mc-top .header-content .hc-options .option-item.menu .menu-container .infos-ct .name {
+                font-weight: 500; }
+  .main-container .mc-bottom {
+    flex: 1;
+    display: flex;
+    position: relative; }
+    .main-container .mc-bottom .main-menu {
+      height: 100%;
+      width: 250px;
+      position: relative;
+      color: #FFF;
+      background-color: #283142; }
+      .main-container .mc-bottom .main-menu .main-menu-inside {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        overflow: auto; }
+        .main-container .mc-bottom .main-menu .main-menu-inside .title {
+          display: block;
+          padding: 12px 24px;
+          font-size: 12px;
+          text-transform: uppercase; }
+        .main-container .mc-bottom .main-menu .main-menu-inside ul li a {
+          display: block;
+          padding: 12px 24px;
+          font-size: 14px;
+          color: inherit; }
+    .main-container .mc-bottom .main-content {
+      flex: 1;
+      background-color: #1b2531;
+      position: relative; }
+      .main-container .mc-bottom .main-content .main-content-inside {
+        position: absolute;
+        padding: 25px;
+        width: 100%;
+        height: 100%;
+        overflow: auto; }
+      .main-container .mc-bottom .main-content .ict-line-container {
+        display: flex;
+        column-gap: 20px; }
+      .main-container .mc-bottom .main-content .initial-container-top {
+        display: flex; }
+        .main-container .mc-bottom .main-content .initial-container-top .ict-left {
+          flex: 1; }
+          .main-container .mc-bottom .main-content .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos {
+            display: flex;
+            align-items: center;
+            column-gap: 16px; }
+            .main-container .mc-bottom .main-content .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos .value-big {
+              font-size: 30px;
+              font-weight: 700;
+              color: #d6d7dc; }
+            .main-container .mc-bottom .main-content .initial-container-top .ict-left .ict-line-container .container-box .lc-cb-infos .value-small {
+              font-size: 17px;
+              font-weight: 700; }
+        .main-container .mc-bottom .main-content .initial-container-top .ict-right {
+          width: 250px;
+          background-color: greenyellow; }
+      .main-container .mc-bottom .main-content .initial-container-bottom {
+        margin-top: 20px; }
+
+.container-box {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 12px;
+  background-color: #283142; }
+  .container-box .cb-header + .cb-body {
+    margin-top: 20px; }
+  .container-box .cb-title {
+    font-size: 17px;
+    color: #d6d7dc;
+    font-weight: 500; }
+  .container-box .cb-text {
+    font-size: 14px;
+    color: #72849a; }
+  .container-box.cb-form-max-width {
+    max-width: 600px; }
+  .container-box .table-container {
+    font-size: 14px;
+    overflow: auto;
+    border-radius: 10px; }
+    .container-box .table-container .tbl-info-circle-ct {
+      display: flex;
+      align-items: center;
+      column-gap: 10px; }
+      .container-box .table-container .tbl-info-circle-ct .circle {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30px;
+        height: 30px;
+        font-size: 12px;
+        border-radius: 30px;
+        color: #FFF;
+        font-weight: 500; }
+    .container-box .table-container .tbl-status {
+      display: inline-flex;
+      border: 1px solid #CCC;
+      min-width: 84px;
+      padding: 8px 12px;
+      border-radius: 8px;
+      font-size: 12px;
+      font-weight: 500;
+      background-color: #2c94cd;
+      border-color: #1c4961;
+      color: rgba(0, 0, 0, 0.6); }
+      .container-box .table-container .tbl-status.color-blue {
+        background-color: #2c94cd;
+        border-color: #1c4961; }
+      .container-box .table-container .tbl-status.color-green {
+        background-color: #9bfbae;
+        border-color: #248737; }
+      .container-box .table-container .tbl-status.color-yellow {
+        background-color: #f2fb9b;
+        border-color: #7b8147; }
+      .container-box .table-container .tbl-status.color-red {
+        background-color: #df7272;
+        border-color: #873a3a; }
+    .container-box .table-container table {
+      width: 100%;
+      border-spacing: 0;
+      border-collapse: separate; }
+      .container-box .table-container table thead tr th {
+        position: relative;
+        padding: 16px 16px;
+        overflow-wrap: break-word;
+        color: #d6d7dc;
+        font-weight: 600;
+        text-align: start;
+        background: #2b3445;
+        border-bottom: 1px solid #1c232f;
+        transition: background 0.2s ease; }
+      .container-box .table-container table tbody tr td {
+        position: relative;
+        padding: 16px 16px;
+        overflow-wrap: break-word;
+        transition: background 0.2s, border-color 0.2s;
+        border-bottom: 1px solid #1c232f; }
+      .container-box .table-container table tbody tr:hover td {
+        background: #2b3445; }
+  .container-box form label {
+    display: flex;
+    flex-direction: column; }
+    .container-box form label + label {
+      margin-top: 15px; }
+    .container-box form label .lbl {
+      font-size: 14px;
+      text-transform: uppercase;
+      font-weight: 500;
+      margin-bottom: 6px; }
+    .container-box form label input, .container-box form label select, .container-box form label textarea {
+      color: #b4bed2;
+      font-size: 16px;
+      width: 100%;
+      padding: 10px 15px;
+      background-color: #283142;
+      background-image: none;
+      border: 1px solid #4d5b75;
+      border-radius: 6px;
+      outline: 0;
+      color-scheme: dark; }
+
+/*# sourceMappingURL=style.css.map */
