--- a/rene_nunes/20240806_admin-template/assets/css/style.scss
+++ b/rene_nunes/20240806_admin-template/assets/css/style.scss
@@ -282,6 +282,8 @@ body {
 		.tbl-status {
 			display: inline-flex;
 			border: 1px solid #CCC;
+			
+			min-width: 84px;
 			padding: 8px 12px;
 			border-radius: 8px;
 			font-size: 12px;
@@ -291,6 +293,8 @@ body {
 			color: rgba(0, 0, 0, 0.6);
 
 			&.color-blue {
+				
+				
 				background-color: #2c94cd;
 				border-color: #1c4961;
 			}
@@ -303,6 +307,8 @@ body {
 			&.color-yellow {
 				background-color: #f2fb9b;
 				border-color: #7b8147;
+				
+				
 			}
 
 			&.color-red {
