--- a/Alan da Silva Batista/20240806_admin-template/assets/css/style.scss
+++ b/Alan da Silva Batista/20240806_admin-template/assets/css/style.scss
@@ -7,11 +7,20 @@
 html,
 body {
 	height: 100%;
+	font-family: "Roboto", sans-serif;
 }
 
 body {
-	font-family: "Roboto", sans-serif;
 	color: #b4bed2;
+}
+
+.flex-1 {
+	flex: 1;
+}
+
+.align-center {
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .main-container {
@@ -56,6 +65,7 @@ body {
 						border: 1px solid #4d5b75;
 						background-color: #1b2531;
 						border-radius: 10px;
+
 						input {
 							color: inherit;
 							height: 100%;
@@ -66,32 +76,41 @@ body {
 						}
 					}
 				}
+
 				.hc-options {
 					display: flex;
 					align-items: center;
 					justify-content: space-between;
+
 					.option-item {
 						padding-left: 16px;
 						padding-right: 16px;
+
 						i {
 							font-size: 20px;
 						}
+
 						&.menu {
+
 							.menu-container {
 								display: flex;
 								align-items: center;
 								column-gap: 8px;
+
 								.image {
 									width: 40px;
 									height: 40px;
 									background-size: cover;
 									border-radius: 40px;
 								}
+
 								.infos-ct {
+
 									.name,
 									.info {
 										font-size: 14px;
 									}
+
 									.name {
 										font-weight: 500;
 									}
@@ -115,6 +134,7 @@ body {
 			position: relative;
 			color: #FFF;
 			background-color: #283142;
+
 			.main-menu-inside {
 				position: absolute;
 				width: 100%;
@@ -122,14 +142,18 @@ body {
 				padding-top: 15px;
 				padding-bottom: 15px;
 				overflow: auto;
+
 				.title {
 					display: block;
 					padding: 12px 24px;
 					font-size: 12px;
 					text-transform: uppercase;
 				}
+
 				ul {
+
 					li {
+
 						a {
 							display: block;
 							padding: 12px 24px;
@@ -140,49 +164,68 @@ body {
 				}
 			}
 		}
+
 		.main-content {
 			flex: 1;
 			background-color: #1b2531;
 			position: relative;
+
 			.main-content-inside {
 				position: absolute;
 				padding: 25px;
 				width: 100%;
 				height: 100%;
 				overflow: auto;
-				.initial-container-top {
-					display: flex;
-					.ict-left {
-						flex: 1;
-						.ict-line-container {
-							.container-box {
-								.lc-cb-infos {
-									display: flex;
-									align-items: center;
-									column-gap: 16px;
-									.value-big {
-										font-size: 30px;
-										font-weight: 700;
-										color: #d6d7dc;
-									}
-									.value-small {
-										font-size: 17px; 
-										font-weight: 700;
-									}
+			}
+
+			.ict-line-container {
+				display: flex;
+				column-gap: 20px;
+			}
+
+			.initial-container-top {
+				display: flex;
+
+				.ict-left {
+					flex: 1;
+
+					.ict-line-container {
+
+						.container-box {
+
+							.lc-cb-infos {
+								display: flex;
+								align-items: center;
+								column-gap: 16px;
+
+								.value-big {
+									font-size: 30px;
+									font-weight: 700;
+									color: #d6d7dc;
+
+								}
+
+								.value-small {
+									font-size: 17px;
+									font-weight: 700;
 								}
 							}
 						}
 					}
-					.ict-right {
-						width: 250px;
-						background-color: greenyellow;
-					}
 				}
+
+				.ict-right {
+					width: 250px;
+					background-color: greenyellow;
+				}
+			}
+
+			.initial-container-bottom {
+				margin-top: 20px;
 			}
 		}
 	}
 }
-
 
 .container-box {
 	display: flex;
@@ -191,12 +234,155 @@ body {
 	border-radius: 12px;
 	background-color: #283142;
 
+	.cb-header {
+
+		&+.cb-body {
+			margin-top: 20px;
+		}
+	}
+
 	.cb-title {
-	
+		font-size: 17px;
+		color: #d6d7dc;
+		font-weight: 500;
 	}
 
 	.cb-text {
-
+		font-size: 14px;
+		color: #72849a;
 	}
 
+	&.cb-form-max-width {
+		max-width: 600px;
+	}
+
+	.table-container {
+		font-size: 14px;
+		overflow: auto;
+		border-radius: 10px;
+
+		.tbl-info-circle-ct {
+			display: flex;
+			align-items: center;
+			column-gap: 10px;
+
+			.circle {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 30px;
+				height: 30px;
+				font-size: 12px;
+				border-radius: 30px;
+				color: #FFF;
+				font-weight: 500;
+			}
+		}
+
+		.tbl-status {
+			display: inline-flex;
+			border: 1px solid #CCC;
+			padding: 8px 12px;
+			border-radius: 8px;
+			font-size: 12px;
+			font-weight: 500;
+			background-color: #2c94cd;
+			border-color: #1c4961;
+			color: rgba(0, 0, 0, 0.6);
+
+			&.color-blue {
+				background-color: #2c94cd;
+				border-color: #1c4961;
+			}
+
+			&.color-green {
+				background-color: #9bfbae;
+				border-color: #248737;
+			}
+
+			&.color-yellow {
+				background-color: #f2fb9b;
+				border-color: #7b8147;
+			}
+
+			&.color-red {
+				background-color: #df7272;
+				border-color: #873a3a;
+			}
+		}
+
+		table {
+			width: 100%;
+			border-spacing: 0;
+			border-collapse: separate;
+
+			thead {
+
+				tr {
+
+					th {
+						position: relative;
+						padding: 16px 16px;
+						overflow-wrap: break-word;
+						color: #d6d7dc;
+						font-weight: 600;
+						text-align: start;
+						background: #2b3445;
+						border-bottom: 1px solid #1c232f;
+						transition: background 0.2s ease;
+					}
+				}
+			}
+
+			tbody {
+
+				tr {
+
+					td {
+						position: relative;
+						padding: 16px 16px;
+						overflow-wrap: break-word;
+						transition: background 0.2s, border-color 0.2s;
+						border-bottom: 1px solid #1c232f;
+					}
+
+					&:hover td {
+						background: #2b3445;
+					}
+				}
+			}
+		}
+	}
+
+	form {
+
+		label {
+			display: flex;
+			flex-direction: column;
+
+			&+label {
+				margin-top: 15px;
+			}
+
+			.lbl {
+				font-size: 14px;
+				text-transform: uppercase;
+				font-weight: 500;
+				margin-bottom: 6px;
+			}
+
+			input, select, textarea {
+				color: #b4bed2;
+				font-size: 16px;
+				width: 100%;
+				padding: 10px 15px;
+				background-color: #283142;
+				background-image: none;
+				border: 1px solid #4d5b75;
+				border-radius: 6px;
+				outline: 0;
+				color-scheme: dark;
+			}
+		}
+	}
 }
