--- a/Joao Victor Correa/20240806_admin-template/assets/css/style.scss
+++ b/Joao Victor Correa/20240806_admin-template/assets/css/style.scss
@@ -371,7 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -382,6 +384,27 @@ body {
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+			}
+		}
+
+		.form-actions {
+			margin-top: 15px;
+			display: flex;
+			justify-content: flex-end;
+
+			button {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 50px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				border: 0;
+				cursor: pointer;
 			}
 		}
 	}
