--- a/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.css
+++ b/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.css
@@ -246,5 +246,22 @@ body {
       border-radius: 6px;
       outline: 0;
       color-scheme: dark; }
+  .container-box form .form-actions {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 15px; }
+    .container-box form .form-actions button {
+      align-items: center;
+      justify-content: center;
+      min-width: 80px;
+      font-size: 14px;
+      height: 40px;
+      padding-left: 15px;
+      padding-right: 15px;
+      border-radius: 10px;
+      background-color: #3e79f7;
+      color: #FFF;
+      border: 0;
+      cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
