--- a/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.scss
+++ b/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.scss
@@ -386,5 +386,26 @@ body {
 				color-scheme: dark;
 			}
 		}
+
+		.form-actions {
+			display: flex;
+			justify-content: flex-end;
+			margin-top: 15px;
+
+			button {
+				align-items: center;
+				justify-content: center;
+				min-width: 80px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				color: #FFF;
+				border: 0;
+				cursor: pointer;
+			}
+		}
 	}
 }
