--- a/Caio Cidral Ramos/20240806_admin-template/assets/css/style.css
+++ b/Caio Cidral Ramos/20240806_admin-template/assets/css/style.css
@@ -233,7 +233,9 @@ body {
       text-transform: uppercase;
       font-weight: 500;
       margin-bottom: 6px; }
-    .container-box form label input, .container-box form label select, .container-box form label textarea {
+    .container-box form label input,
+    .container-box form label select,
+    .container-box form label textarea {
       color: #b4bed2;
       font-size: 16px;
       width: 100%;
@@ -244,5 +246,23 @@ body {
       border-radius: 6px;
       outline: 0;
       color-scheme: dark; }
+  .container-box form .form-actions {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 15px; }
+    .container-box form .form-actions button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 80px;
+      font-size: 14px;
+      height: 40px;
+      padding-left: 15px;
+      padding-right: 15px;
+      border-radius: 10px;
+      background-color: #3e79f7;
+      color: #FFF;
+      border: 0;
+      cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
