--- a/Lucas Abreu Leite Nepomuceno/20240806_admin-template/assets/css/style.scss
+++ b/Lucas Abreu Leite Nepomuceno/20240806_admin-template/assets/css/style.scss
@@ -371,7 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -384,5 +386,30 @@ body {
 				color-scheme: dark;
 			}
 		}
+
+		.form-actions {
+			display: flex;
+			justify-content: flex-end;
+			margin-top: 15px;
+
+
+			button {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 80px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				color: #fff;
+				border: 0;
+				cursor: pointer;
+
+			}
+		}
+
 	}
 }
