--- a/Gabriel Aguiar Bruno/20240806_admin-template/assets/css/style.scss
+++ b/Gabriel Aguiar Bruno/20240806_admin-template/assets/css/style.scss
@@ -281,9 +281,6 @@ body {
 
 		.tbl-status {
 			display: inline-flex;
-			align-items: center;
-			justify-content: center;
-			min-width: 84px;
 			border: 1px solid #CCC;
 			padding: 8px 12px;
 			border-radius: 8px;
@@ -374,7 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -387,17 +386,17 @@ body {
 				color-scheme: dark;
 			}
 		}
-		
-		.form-actions{
+
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
 			margin-top: 15px;
 
-			button{
+			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				min-width: 80x;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
 				padding-left: 15px;
