--- a/Nicolas Goncalves Sombrio/20240806_admin-template/assets/css/style.scss
+++ b/Nicolas Goncalves Sombrio/20240806_admin-template/assets/css/style.scss
@@ -371,7 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -385,25 +387,25 @@ body {
 			}
 		}
 
-		.form-actions{
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
 			margin-top: 15px;
-			
-			button{
+
+			button {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				min-width: 80px;
 				padding-left: 15px;
 				padding-right: 15px;
 				border-radius: 10px;
 				background-color: #3e79f7;
+				color: #FFF;
 				border: 0;
 				cursor: pointer;
-				color: #fff;
 			}
 		}
 	}
