--- a/diogo_dallagnolo/20240806_admin-template/assets/css/style.css
+++ b/diogo_dallagnolo/20240806_admin-template/assets/css/style.css
@@ -233,7 +233,9 @@ body {
       text-transform: uppercase;
       font-weight: 500;
       margin-bottom: 6px; }
-    .container-box form label input, .container-box form label select, .container-box form label textarea {
+    .container-box form label input,
+    .container-box form label select,
+    .container-box form label textarea {
       color: #b4bed2;
       font-size: 16px;
       width: 100%;
@@ -252,7 +254,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      min-width: 50px;
+      min-width: 80px;
       font-size: 14px;
       height: 40px;
       padding-left: 15px;
