--- a/diogo_dallagnolo/20240806_admin-template/assets/css/style.scss
+++ b/diogo_dallagnolo/20240806_admin-template/assets/css/style.scss
@@ -371,7 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -384,16 +386,17 @@ body {
 				color-scheme: dark;
 			}
 		}
-		.form-actions{
+
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
 			margin-top: 15px;
-			
-			button{
+
+			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				min-width: 50px;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
 				padding-left: 15px;
