--- a/rene_nunes/20240806_admin-template/assets/css/style.css
+++ b/rene_nunes/20240806_admin-template/assets/css/style.css
@@ -182,9 +182,6 @@ body {
     .container-box .table-container .tbl-status {
       display: inline-flex;
       border: 1px solid #CCC;
-      align-items: center;
-      justify-content: center;
-      min-width: 84px;
       padding: 8px 12px;
       border-radius: 8px;
       font-size: 12px;
@@ -236,7 +233,9 @@ body {
       text-transform: uppercase;
       font-weight: 500;
       margin-bottom: 6px; }
-    .container-box form label input, .container-box form label select, .container-box form label textarea {
+    .container-box form label input,
+    .container-box form label select,
+    .container-box form label textarea {
       color: #b4bed2;
       font-size: 16px;
       width: 100%;
@@ -248,21 +247,21 @@ body {
       outline: 0;
       color-scheme: dark; }
   .container-box form .form-actions {
-    margin-top: 15px;
     display: flex;
-    justify-content: flex-end; }
+    justify-content: flex-end;
+    margin-top: 15px; }
     .container-box form .form-actions button {
       display: flex;
       align-items: center;
       justify-content: center;
-      min-width: 50px;
+      min-width: 80px;
       font-size: 14px;
       height: 40px;
       padding-left: 15px;
       padding-right: 15px;
       border-radius: 10px;
       background-color: #3e79f7;
-      color: #fff;
+      color: #FFF;
       border: 0;
       cursor: pointer; }
 
