--- a/rene_nunes/20240806_admin-template/assets/css/style.scss
+++ b/rene_nunes/20240806_admin-template/assets/css/style.scss
@@ -282,9 +282,6 @@ body {
 		.tbl-status {
 			display: inline-flex;
 			border: 1px solid #CCC;
-			align-items: center;
-			justify-content: center;
-			min-width: 84px;
 			padding: 8px 12px;
 			border-radius: 8px;
 			font-size: 12px;
@@ -294,8 +291,6 @@ body {
 			color: rgba(0, 0, 0, 0.6);
 
 			&.color-blue {
-				
-				
 				background-color: #2c94cd;
 				border-color: #1c4961;
 			}
@@ -308,8 +303,6 @@ body {
 			&.color-yellow {
 				background-color: #f2fb9b;
 				border-color: #7b8147;
-				
-				
 			}
 
 			&.color-red {
@@ -378,7 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -390,28 +385,27 @@ body {
 				outline: 0;
 				color-scheme: dark;
 			}
-
-			
 		}
 
-		.form-actions{
-			margin-top: 15px;
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
-			button{
+			margin-top: 15px;
+
+			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				min-width: 50px;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
 				padding-left: 15px;
 				padding-right: 15px;
 				border-radius: 10px;
 				background-color: #3e79f7;
-				color: #fff;
-				border: 0;		
-				cursor: pointer;		
+				color: #FFF;
+				border: 0;
+				cursor: pointer;
 			}
 		}
 	}
