--- a/Pedro Zimermann/20240806_admin-template/assets/css/style.scss
+++ b/Pedro Zimermann/20240806_admin-template/assets/css/style.scss
@@ -371,13 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-<<<<<<< Updated upstream
 			input,
 			select,
 			textarea {
-=======
-			input, select, textarea {
->>>>>>> Stashed changes
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -389,31 +385,28 @@ body {
 				outline: 0;
 				color-scheme: dark;
 			}
-<<<<<<< Updated upstream
 		}
 
 		.form-actions {
 			display: flex;
 			justify-content: flex-end;
 			margin-top: 15px;
-			
+
 			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				min-width: 50px;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
 				padding-left: 15px;
 				padding-right: 15px;
 				border-radius: 10px;
 				background-color: #3e79f7;
-				color: #fff;
-				cursor: pointer;
+				color: #FFF;
 				border: 0;
+				cursor: pointer;
 			}
-=======
->>>>>>> Stashed changes
 		}
 	}
 }
